glfilter: rewrite transform_caps to preserve caps fields

https://bugzilla.gnome.org/show_bug.cgi?id=729861